# swapy

./: README.md  _testing.py  app.py  pyproject.toml  stg_vehicles.duckdb  swapi.duckdb  testing.py
api_wan/: api_wan.py  api_wan_test.py
dags/: definitions.py
dags/assets/: stg_films.py  stg_people.py  stg_planets.py  stg_species.py  stg_vehicles.py
data/: swapi.duckdb
dbts/: .user.yml  dbt_project.yml  profiles.yml
dbts/models/: int_films.sql  source.yml
dbts/models/core/: dim_characters.sql  dim_characters.yml  dim_film_characters.sql  dim_film_characters.yml  dim_film_planets.sql  dim_film_planets.yml  dim_films.sql  dim_films.yml
dlts/: stg_vehicles.py
tmp3zvkeom8/history/: runs.db
tmp3zvkeom8/history/runs/: index.db
tmp3zvkeom8/schedules/: schedules.db
tmp896gkl92/history/: runs.db
tmp896gkl92/history/runs/: index.db
tmp896gkl92/schedules/: schedules.db
tmpclgskxv2/history/: runs.db
tmpclgskxv2/history/runs/: 012dc47e-6c5b-4314-8ea3-6899044c25bb.db  397956ae-250b-4f97-89bf-0265aed48b90.db  946d5ef2-087a-4db1-b1d8-d89370b9966f.db  e63785e1-63dd-42ed-9c96-b9fbedb0f430.db  index.db
tmpclgskxv2/schedules/: schedules.db
tmpoggfrczs/history/: runs.db
tmpoggfrczs/history/runs/: 270f5a07-4b68-43d9-bbaf-4c321692aae7.db  31749ec2-984e-49bd-a9ed-c8a2d33c3472.db  index.db  (+8 more)
tmpoggfrczs/schedules/: schedules.db
tmppu3t79vw/history/: runs.db
tmppu3t79vw/schedules/: schedules.db
tmpqabafzp1/history/: runs.db
tmpqabafzp1/schedules/: schedules.db
tmptvioxl5j/history/: runs.db
tmptvioxl5j/schedules/: schedules.db
(+125 files in other folders)
