[tool.poetry]
name = "swapy"
version = "0.1.0"
description = ""
authors = ["robgriffin247 <robgriffinwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dagster = "^1.7.10"
dagster-webserver = "^1.7.10"
httpx = "^0.27.0"
dagster-duckdb = "^0.23.10"
dagster-duckdb-pandas = "^0.23.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
